testdata/baselines/reference/compiler/tluaVarargBasics.errors.txt
tluaVarargBasics.tlua(31,11): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
tluaVarargBasics.tlua(32,16): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tluaVarargBasics.tlua (2 errors) ====
    // A vararg parameter is a bare `...` in final position. It has no binding name,
    // and its annotation is the *element* type of the pack, not an array type.
    function annotated(...: number): void
    end
    
    // An unannotated vararg is an `any` pack.
    function bare(...): void
    end
    
    // Varargs coexist with fixed parameters.
    function withFixed(label: string, ...: string): string
      return label;
    end
    
    // `...` expands in a value list, so both names bind. A rest-only pack may be
    // empty, so each name is `number | nil`.
    function twoNames(...: number): (number | nil, number | nil)
      local a, b = ...;
      return a, b;
    end
    
    // A vararg function accepts zero or more trailing arguments.
    annotated();
    annotated(1, 2, 3);
    withFixed("x");
    withFixed("x", "y", "z");
    bare();
    bare(1, "two", true);
    
    // The element type is checked.
    annotated("nope");
              ~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    withFixed("x", 1);
                   ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    